--- a/MyRestorationLearning/Base.lproj/Main.storyboard
+++ b/MyRestorationLearning/Base.lproj/Main.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Root View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="RootViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -41,10 +41,10 @@
             </objects>
             <point key="canvasLocation" x="860" y="138"/>
         </scene>
-        <!--View Controller-->
+        <!--Presented View Controller-->
         <scene sceneID="6bl-k9-WLp">
             <objects>
-                <viewController id="T1d-Pz-mcm" sceneMemberID="viewController">
+                <viewController restorationIdentifier="presented" id="T1d-Pz-mcm" customClass="PresentedViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="AF5-YZ-ItJ"/>
                         <viewControllerLayoutGuide type="bottom" id="rWz-vw-2yu"/>
@@ -72,12 +72,12 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nWa-K4-oRu" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="9Nf-z8-Wus" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1013" y="847"/>
+            <point key="canvasLocation" x="1070" y="892"/>
         </scene>
-        <!--View Controller-->
+        <!--Second View Controller-->
         <scene sceneID="0gO-1r-8fq">
             <objects>
-                <viewController id="Nid-Yk-rqa" sceneMemberID="viewController">
+                <viewController id="Nid-Yk-rqa" customClass="SecondViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="4Ex-ZK-V6T"/>
                         <viewControllerLayoutGuide type="bottom" id="GuM-y0-oWK"/>
@@ -129,6 +129,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="n8b-F0-o31"/>
+        <segue reference="Gkp-ZF-kku"/>
     </inferredMetricsTieBreakers>
 </document>
